<resources>
    <string name="app_name">Motiva Quotes</string>
    <string name="Hello">"Start over"</string>
    <string name="phone_number">"phone number"</string>
    <string name="password">"password"</string>
    <string name="login_text">"login"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="signup_login">"signup?"</string>
    <string name="login">"login"</string>
    <string name="signup">"sign up"</string>
    <string name="login_signup">"login?"</string>
    <string name="username">username</string>
    <string name="verification">"verification"</string>
    <string name="verification_subtitles">"verification code sent to 9489473688 please enter the 6 digit code to get verified …"</string>
    <string name="verify">"verify"</string>
    <string name="resend_code">"resend code?"</string>
    <string name="successful_header_text">"successful"</string>
    <string name="successful_message">"phone number verification successful.... enter password to continue"</string>
    <string name="enter_password">"enter password"</string>
    <string name="unsuccessful_header_text">"unsuccessful"</string>
    <string name="unsuccessful_message">"phone number verification successful.... enter password to continue"</string>
    <string name="back_to_verification">"back to verification"</string>
    <string name="forgot_pass_header">"forgot password"</string>
    <string name="new_password">"new password"</string>
    <string name="retype_password">"retype password"</string>
    <string name="change_password_button">"change password"</string>
    <string name="signOut">"sign out"</string>
    <string name="no_favourites">Nothing to add as favourites</string>
    <string name="no_categories">Nothing to show as categories</string>
    <string name="no_rewards">coming soon!</string>
    <string name="title_activity_bottom_nav_menu">BottomNavMenu</string>
    <string name="title_homepage">home</string>
    <string name="title_categories">categories</string>
    <string name="title_favourites">favourites</string>
    <string name="title_my_rewards">my rewards</string>
    <string name="title_settings">settings</string>
    <string name="homepage">home</string>
    <string name="language">language</string>
    <string name="profile">my profile</string>
    <string name="change_theme">change theme</string>
    <string name="log_info">logged in as</string>
    <string name="logout">logout</string>
    <string name="terms">terms and services   |   privacy policies</string>
    <string name="light_theme">light_theme</string>
    <string name="dark_theme">dark_theme</string>
    <string name="system_theme">system default</string>
</resources>