<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".Authentication.Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="56dp"
        android:layout_weight="60">

        <!--quotify text-->
        <TextView
            android:id="@+id/quotes_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="fedora"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="italic" />

        <!--login text-->
        <TextView
            android:id="@+id/quotes_app_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quotes_app"
            android:layout_centerHorizontal="true"
            android:paddingTop="50sp"
            android:text="@string/login_text"
            android:textSize="26sp"
            android:textStyle="normal" />

        <!--    input phone number-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quotes_app_login"
            android:layout_centerHorizontal="true"
            android:hint="@string/phone_number"
            android:paddingTop="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
            <requestFocus />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    input password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number_field"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:paddingTop="20sp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        forgot password textview-->
        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_login_field"
            android:layout_centerHorizontal="true"
            android:paddingTop="20sp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <!--        signup button -->
            <Button
                android:id="@+id/signup_button"
                android:layout_width="120sp"
                android:layout_height="48sp"
                android:layout_alignParentStart="true"
                android:text="@string/signup_login"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="normal" />

            <!--            login button-->
            <Button
                android:id="@+id/login_button"
                android:layout_width="120sp"
                android:layout_height="48sp"
                android:layout_alignParentEnd="true"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>