<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".RetypePassword">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="56dp"
        android:layout_weight="57">

        <!--quotify text-->
        <TextView
            android:id="@+id/quotes_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="fedora"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="italic" />

        <!--forgot password text-->
        <TextView
            android:id="@+id/quotes_app_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quotes_app"
            android:layout_centerHorizontal="true"
            android:paddingTop="50sp"
            android:text="@string/forgot_pass_header"
            android:textSize="26sp"
            android:textStyle="normal" />

        <!--    input new password-->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quotes_app_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/new_password"
            android:paddingTop="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    input retype  password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retype_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_password_field"
            android:layout_centerHorizontal="true"
            android:hint="@string/retype_password"
            android:paddingTop="20sp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--forgot password button -->
        <Button
            android:id="@+id/change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:layout_below="@+id/retype_password_field"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:text="@string/change_password_button"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </RelativeLayout>


</LinearLayout>