<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="9dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_marginStart="39dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="39dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/user_profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/user_profile_icon" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_profile_default"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                app:shapeAppearanceOverlay="@style/roundedImage"
                app:srcCompat="@drawable/profile_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/username_text"
                app:srcCompat="@drawable/edit_icon" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layerType="software"
            android:src="@drawable/dotted_line" />

        <RelativeLayout
            android:id="@+id/language_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/relative_layout_hover_bg"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/language_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/language_icon" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/language_icon"
                android:text="@string/language"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_profile_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/relative_layout_hover_bg"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/profile_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/profile_icon"
                android:text="@string/profile"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/change_theme_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/relative_layout_hover_bg"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/theme_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/theme_icon" />

            <TextView
                android:id="@+id/theme_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/theme_icon"
                android:text="@string/change_theme"
                android:textSize="16sp" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layerType="software"
            android:src="@drawable/dotted_line" />

        <RelativeLayout
            android:id="@+id/log_info_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/relative_layout_hover_bg"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/log_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mail_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/log_image"
                android:text="@string/log_info"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logout_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/relative_layout_hover_bg"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/logout_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/logout_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/logout_icon"
                android:text="@string/logout"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/terms"
        android:textSize="12sp" />
</RelativeLayout>